--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,11 @@
     <string name="title_activity_settings">Settings</string>
     <string name="title">RNIDS WHOIS Lookup</string>
     <string name="button_loading">Please wait…</string>
+    <string name="empty_error">You need to enter a domain</string>
+    <string name="invalid_error">That\'s not a valid domain</string>
+
+    <string name="results_mode_raw">Raw</string>
+    <string name="results_mode_pretty">Pretty</string>
 
     <!-- Preference Titles -->
     <string name="pref_general_header">General</string>
