--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,22 +1,26 @@
 <resources>
-    <string name="app_name">RNIDS</string>
+    <string name="app_name" translatable="false">RNIDS</string>
     <string name="title_lookup">Lookup</string>
     <string name="title_results">Results</string>
-    <string name="title_support">History</string>
+    <string name="title_support">Support</string>
     <string name="lookup_placeholder">Enter a domain to query…</string>
     <string name="lookup_button">Query</string>
-    <string name="theme_switch">Dark Theme</string>
+    <string name="theme_switch">Night Mode</string>
     <string name="title_activity_settings">Settings</string>
     <string name="title">RNIDS WHOIS Lookup</string>
     <string name="button_loading">Please wait…</string>
-    <string name="empty_error">You need to enter a domain</string>
-    <string name="invalid_error">That\'s not a valid domain</string>
-
-    <string name="results_mode_raw">Raw</string>
+    <string name="language_switch">Language</string>
+    <string name="resolution_switch">Graphics</string>
+    <string name="orientation_switch">Orientation</string>
+    <string name="brigthness_adjustment">Adjust Brigthness Level</string>
+    <string name="support">Support</string>
+    <string name="supportMessage">This app was made by students for 2021 Hackathon. Our contact mail is *</string>
+    <string name="invalid_error">Invalid Error</string>
+    <string name="empty_error">Empty</string>
     <string name="results_mode_pretty">Pretty</string>
+    <string name="results_mode_raw">Raw</string>
+
 
     <!-- Preference Titles -->
     <string name="pref_general_header">General</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
